2011-11-01  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* fix state-number simplification from 2011-09-27

2011-11-01  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* fix clone existentials bug

2011-10-28  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* existential variable window/dialog
	* fix rounding bug with width and subtree_width

2011-10-24  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* some more doc strings

2011-10-22  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* use a different color for proved branches with
	  non-instantiated existential variables
	* some more doc strings

2011-10-20  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* manage uninstantiated existential variables
	* change coq patch to print the uninstantiated existentials
	* change communication protocol to send the list of open
	  existentials to prooftree
	* change Proof General to extract and send uninstantiated
	  existentials
	* proof-tree nodes have now a list of existential
	  variables, which is changed in place, when they get
	  instantiated
	* change sequent and proof-command displays to list open
	  existentials
	* update these displays as necessary

2011-10-07  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* fix full-annotation problem (elisp only)

2011-10-04  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* move recent-changes marker in sync with website

2011-10-04  Hendrik Tews <prooftree@askra.de>

	* release version 0.6 on 2011-10-04 10:26:05 UTC

2011-10-04  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* make-bundle fix

2011-10-04  Hendrik Tews <prooftree@askra.de>

	* prepare changes.html for release

2011-09-27  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* simplify state numbers

2011-09-23  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* fix bug of not properly deleted proof tree windows and
	  structures

2011-09-15  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* fix a current node position bug
	* some more doc strings

2011-08-12  Hendrik Tews  <tews@os.inf.tu-dresden.de>
