@@ -1,5 +1,9 @@
 2011-11-01  Hendrik Tews  <tews@os.inf.tu-dresden.de>
 
+	* help text / man page for existential dialog
+
+2011-11-01  Hendrik Tews  <tews@os.inf.tu-dresden.de>
+
 	* fix state-number simplification from 2011-09-27
 
 2011-11-01  Hendrik Tews  <tews@os.inf.tu-dresden.de>
